# scIDiff-v2

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
data/: __init__.py  dataset.py
models/: __init__.py  conditioning.py  diffusion_model.py  noise_scheduler.py  ot_diffusion_model.py  score_network.py
notebooks/: 01_basic_usage.ipynb  01_basic_usage_fixed.ipynb  01_basic_usage_working.ipynb  05_schrodinger_bridge_perturbation.ipynb
sampling/: __init__.py  inverse_design.py
scIDiff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_models.py
training/: __init__.py  losses.py  trainer.py  utils.py
transport/: __init__.py  bridges.py
